add finalName in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,7 @@
 	</dependencyManagement>
 
 	<build>
-		<finalName></finalName>
+		<finalName>${project.artifactId}}</finalName>
 		<sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
 		<testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
 		<plugins>
