--- a/docker/.env
+++ b/docker/.env
@@ -1,3 +1,5 @@
-DB_USER=dio.avenger
-DB_PASSWORD=dio.avenger
+DB_USER=avenger
+DB_PASSWORD=avenger
 DB_NAME=avengers
+PGADMIN_DEFAULT_EMAIL=avengers@email.com
+PGADMIN_DEFAULT_PASSWORD=123456
